--- a/app/style.css
+++ b/app/style.css
@@ -9,14 +9,14 @@
 
 .home-hero-text-1 {
   display: block;
-  font-size: 3rem;
+  font-size: 2.85rem;
   line-height: 3.5rem;
   font-weight: bold;
 }
 
 .home-hero-text-2 {
   font-weight: 200;
-  font-size: 1.75rem;
+  font-size: 1.65rem;
   line-height: 2.25rem;
 }
 
@@ -108,7 +108,8 @@
   }
 
   .home-generate-text {
-    font-size: 1.35rem;
+    font-size: 1.25rem;
+    line-height: 2rem;
   }
 }
 
@@ -120,6 +121,13 @@
 
   .home-about-section-text {
     width: 100%;
+  }
+}
+
+@media (max-width: 880px) {
+  .home-hero-text-1 {
+    font-size: 2rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -157,15 +165,63 @@
   }
 }
 
+@media (max-width: 600px) {
+  .card-modal {
+    height: 100%;
+    width: 100%;
+    border-radius: 0px;
+    padding: 30px;
+  }
+
+  .card-modal-title {
+    font-size: 1.5rem;
+    margin-bottom: 0px;
+  }
+
+  .card-modal-subtitle {
+    font-size: 1rem;
+  }
+
+  .card-modal-content {
+    padding: 20px;
+    padding-top: 40px;
+  }
+  .card-modal-text-title {
+    font-size: 1.4rem;
+  }
+
+  .embla__modal__controls {
+    margin-top: 0px;
+  }
+
+  .card-modal-text-paragraph {
+    font-size: 1rem;
+  }
+}
+
 @media (max-width: 425px) {
   .home-hero-text-1 {
-    font-size: 1rem;
+    font-size: 1.35rem;
     line-height: 2rem;
+    text-align: center;
+  }
+
+  .home-hero-motion-div {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
   }
 
   .home-hero-text-2 {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     line-height: 1rem;
+    text-align: center;
+  }
+
+  .home-hero-text-container {
+    gap: 20px;
   }
 
   .home-about-section {
@@ -199,5 +255,12 @@
 
   .contact-list-container {
     gap: 15px;
+  }
+}
+
+@media (max-width: 390px) {
+  .home-hero-text-1 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
